<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/drawer_home"
            android:icon="@drawable/ic_home"
            android:title="@string/drawer_home" />

        <item
            android:id="@+id/drawer_create_group"
            android:icon="@drawable/ic_group"
            android:title="@string/drawer_create_group" />

        <item
            android:id="@+id/drawer_start_game"
            android:icon="@drawable/ic_play"
            android:title="@string/drawer_start_game" />

        <item
            android:id="@+id/drawer_sync"
            android:icon="@drawable/ic_sync"
            android:title="@string/drawer_sync" />

    </group>

</menu>
